--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
 
         <!-- Welcome page to start quiz -->
-        <section class="startpage">
+        <section id="startpage">
             <h1 id="h1-welcome">Coding Quiz Challenge</h1>
             <p id="p-welcome">
                 Try to answer the following code-related questions within the time limit. 
@@ -28,21 +28,12 @@
         <!-- Quiz boxes -->
         <main>
             <!-- each question container set to id for Web API use in script -->
-            <section id="question1">
-                <h1 class="questions">Commonly used data types DO NOT include:</h1>
-                <button class="ans-btn">1. strings</button>
-                <button class="ans-btn">2. booleans</button>
-                <button class="ans-btn">3. alerts</button>
-                <button class="ans-btn">4. numbers</button>
-            </section>
-            <section id="question2">
-                <h1 class="questions">The condition in an if/else statement is enclosed with _______.</h1>
-                <button class="ans-btn">1. quotes</button>
-                <button class="ans-btn">2. curly brackets</button>
-                <button class="ans-btn">3. parenthesis</button>
-                <button class="ans-btn">4. square brackets</button>
-            </section>
+            <div id="question1" class="hidden, questions"></div>
+            <ol id="answers1"></ol>
+            <div id="question2" class="hidden"></div>
         </main>
+        <!-- End of the game where user inputs initials -->
+
 
         <script src="./assets/js/script.js"></script>
     </body>
